--- a/DDOUIManager/DDOUIManager/DDOUIManager.csproj
+++ b/DDOUIManager/DDOUIManager/DDOUIManager.csproj
@@ -66,6 +66,9 @@
     <Compile Include="SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SkinNameConflictWindow.xaml.cs">
+      <DependentUpon>SkinNameConflictWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="DecompressFileWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -83,6 +86,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="SettingsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SkinNameConflictWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
