--- a/DDOUIManager/DDOUIManager/DDOUIManager.csproj
+++ b/DDOUIManager/DDOUIManager/DDOUIManager.csproj
@@ -65,6 +65,9 @@
     <Compile Include="DecompressFileWindow.xaml.cs">
       <DependentUpon>DecompressFileWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RenameSkinWindow.xaml.cs">
+      <DependentUpon>RenameSkinWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SettingsManager.cs" />
     <Compile Include="SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
@@ -92,6 +95,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="RenameSkinWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="SettingsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
